# whisper-subtitles

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements-lock.txt  requirements.txt
.github/workflows/: lint.yml
src/whisper_subtitles/: __init__.py  transcribe.py  translate.py
